--- a/routes.ini
+++ b/routes.ini
@@ -3,3 +3,5 @@
 POST /registrar-cliente=Cliente_Ctrl->registrar
 GET /consultar-cliente/@id_cliente=Cliente_Ctrl->consultar
 POST /actualizar-cuenta/@id_cliente=Cliente_Ctrl->actualizar_cuenta
+;PROVINCIAS
+GET /provincias-pais/@id_pais=Provincias_Ctrl->consultar
