Modelos:marcas modelos ciudades Controladores:ciudades datosenvio datosfactura marcas modelos pedidos tipovehiculo

--- a/routes.ini
+++ b/routes.ini
@@ -5,3 +5,15 @@ GET /consultar-cliente/@id_cliente=Cliente_Ctrl->consultar
 POST /actualizar-cuenta/@id_cliente=Cliente_Ctrl->actualizar_cuenta
 ;PROVINCIAS
 GET /provincias-pais/@id_pais=Provincias_Ctrl->consultar
+;CIUDADES
+GET /ciudades-provincia/@id_provincia=Ciudades_Ctrl->consultar
+;TIPO_VEHICULO
+GET /listado-tipo-vehiculo=Tipo_Vehiculos_Ctrl->listado
+;MARCAS
+GET /marcas-tipov/@id_tipov=Marcas_Ctrl->consultar
+;MODELOS
+GET /modelo-marca/@id_marca=Modelos_Ctrl->consultar
+;PEDIDOS
+POST /registrar-pedido=Pedidos_Ctrl->registrar
+;DATOS FACTURA
+POST /registrar-factura=Datos_Factura_Ctrl->registrar
