--- a/routes.ini
+++ b/routes.ini
@@ -3,6 +3,7 @@
 POST /registrar-cliente=Cliente_Ctrl->registrar
 GET /consultar-cliente/@id_cliente=Cliente_Ctrl->consultar
 POST /actualizar-cuenta/@id_cliente=Cliente_Ctrl->actualizar_cuenta
+POST /login-cliente=Cliente_Ctrl->login
 ;PROVINCIAS
 GET /provincias-pais/@id_pais=Provincias_Ctrl->consultar
 ;CIUDADES
