--- a/routes.ini
+++ b/routes.ini
@@ -16,5 +16,6 @@ GET /marcas-tipov/@id_tipov=Marcas_Ctrl->consultar
 GET /modelo-marca/@id_marca=Modelos_Ctrl->consultar
 ;PEDIDOS
 POST /registrar-pedido=Pedidos_Ctrl->registrar
+POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
