--- a/routes.ini
+++ b/routes.ini
@@ -17,5 +17,6 @@ GET /modelo-marca/@id_marca=Modelos_Ctrl->consultar
 ;PEDIDOS
 POST /registrar-pedido=Pedidos_Ctrl->registrar
 POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
+GET /consultar-pedido/@cod_pedido=Pedidos_Ctrl->consultar
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
