api registro proveedor

--- a/routes.ini
+++ b/routes.ini
@@ -20,3 +20,5 @@ POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
 GET /consultar-pedido/@cod_pedido=Pedidos_Ctrl->consultar
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
+;PROVEEDOR
+POST /registrar-proveedor=Proveedor_Ctrl->registrar
