--- a/routes.ini
+++ b/routes.ini
@@ -18,7 +18,9 @@ GET /modelo-marca/@id_marca=Modelos_Ctrl->consultar
 POST /registrar-pedido=Pedidos_Ctrl->registrar
 POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
 GET /consultar-pedido/@cod_pedido=Pedidos_Ctrl->consultar
+POST /listar-pedidos-nuevos=Pedidos_Ctrl->Listar_Pedidos_Nuevos
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
 ;PROVEEDOR
 POST /registrar-proveedor=Proveedor_Ctrl->registrar
+POST /login-proveedor=Proveedor_Ctrl->login
