--- a/routes.ini
+++ b/routes.ini
@@ -24,3 +24,5 @@ POST /registrar-factura=Datos_Factura_Ctrl->registrar
 ;PROVEEDOR
 POST /registrar-proveedor=Proveedor_Ctrl->registrar
 POST /login-proveedor=Proveedor_Ctrl->login
+;PROPUESTAS
+POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
