--- a/routes.ini
+++ b/routes.ini
@@ -19,6 +19,7 @@ POST /registrar-pedido=Pedidos_Ctrl->registrar
 POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
 GET /consultar-pedido/@cod_pedido=Pedidos_Ctrl->consultar
 POST /listar-pedidos-nuevos=Pedidos_Ctrl->Listar_Pedidos_Nuevos
+POST /listar-pedidos-enviados=Pedidos_Ctrl->Listar_Pedidos_Enviados
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
 ;PROVEEDOR
