--- a/routes.ini
+++ b/routes.ini
@@ -20,10 +20,15 @@ POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
 GET /consultar-pedido/@cod_pedido=Pedidos_Ctrl->consultar
 POST /listar-pedidos-nuevos=Pedidos_Ctrl->Listar_Pedidos_Nuevos
 POST /listar-pedidos-enviados=Pedidos_Ctrl->Listar_Pedidos_Enviados
+POST /listar-pedidos-aceptados=Pedidos_Ctrl->Listar_Pedidos_Aceptados
+POST /listar-pedidos-historial=Pedidos_Ctrl->Listar_Pedidos_Historial
+POST /consultar-cod-pedido/@cod_pedido=Pedidos_Ctrl->consultar_Pedido
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
 ;PROVEEDOR
 POST /registrar-proveedor=Proveedor_Ctrl->registrar
 POST /login-proveedor=Proveedor_Ctrl->login
+GET /consultar-proveedor/@cod_proveedor=Proveedor_Ctrl->consultar
 ;PROPUESTAS
 POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
+POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
