--- a/routes.ini
+++ b/routes.ini
@@ -19,6 +19,9 @@ POST /registrar-pedido=Pedidos_Ctrl->registrar
 POST /listar-pedidos=Pedidos_Ctrl->Listar_Pedidos
 GET /consultar-pedido/@cod_pedido=Pedidos_Ctrl->consultar
 POST /listar-pedidos-nuevos=Pedidos_Ctrl->Listar_Pedidos_Nuevos
+POST /listar-pedidos-nuevos_por_TipoV=Pedidos_Ctrl->Listar_Pedidos_Nuevos_PorTipoV
+POST /listar-pedidos-nuevos_por_Marca=Pedidos_Ctrl->Listar_Pedidos_Nuevos_PorMarca
+POST /listar-pedidos-nuevos_por_Termino=Pedidos_Ctrl->Listar_Pedidos_Nuevos_PorTermino
 POST /listar-pedidos-enviados=Pedidos_Ctrl->Listar_Pedidos_Enviados
 POST /listar-pedidos-aceptados=Pedidos_Ctrl->Listar_Pedidos_Aceptados
 POST /listar-pedidos-historial=Pedidos_Ctrl->Listar_Pedidos_Historial
