llenado de tablas servicios pedidos finalizados

--- a/routes.ini
+++ b/routes.ini
@@ -24,6 +24,7 @@ POST /listar-pedidos-nuevos_por_Marca=Pedidos_Ctrl->Listar_Pedidos_Nuevos_PorMar
 POST /listar-pedidos-nuevos_por_Termino=Pedidos_Ctrl->Listar_Pedidos_Nuevos_PorTermino
 POST /listar-pedidos-enviados=Pedidos_Ctrl->Listar_Pedidos_Enviados
 POST /listar-pedidos-aceptados=Pedidos_Ctrl->Listar_Pedidos_Aceptados
+POST /listar-pedidos-finalizados=Pedidos_Ctrl->Listar_Pedidos_Finalizados
 POST /listar-pedidos-historial=Pedidos_Ctrl->Listar_Pedidos_Historial
 POST /consultar-cod-pedido/@cod_pedido=Pedidos_Ctrl->consultar_Pedido
 ;DATOS FACTURA
