--- a/routes.ini
+++ b/routes.ini
@@ -36,3 +36,5 @@ GET /consultar-proveedor/@cod_proveedor=Proveedor_Ctrl->consultar
 ;PROPUESTAS
 POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
 POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
+;ADMINISTRADORES
+POST /login-administrador=Administradores_Ctrl->login
