--- a/routes.ini
+++ b/routes.ini
@@ -33,6 +33,7 @@ POST /registrar-factura=Datos_Factura_Ctrl->registrar
 POST /registrar-proveedor=Proveedor_Ctrl->registrar
 POST /login-proveedor=Proveedor_Ctrl->login
 GET /consultar-proveedor/@cod_proveedor=Proveedor_Ctrl->consultar
+GET /listar-proveedores=Proveedor_Ctrl->listar_proveedores
 ;PROPUESTAS
 POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
 POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
