--- a/routes.ini
+++ b/routes.ini
@@ -34,8 +34,11 @@ POST /registrar-proveedor=Proveedor_Ctrl->registrar
 POST /login-proveedor=Proveedor_Ctrl->login
 GET /consultar-proveedor/@cod_proveedor=Proveedor_Ctrl->consultar
 GET /listar-proveedores=Proveedor_Ctrl->listar_proveedores
+POST /editar-proveedor/@id_proveedor=Proveedor_Ctrl->actualizar
 ;PROPUESTAS
 POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
 POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
 ;ADMINISTRADORES
 POST /login-administrador=Administradores_Ctrl->login
+;ESTADOS
+GET /listar-estados=Estados_Ctrl->listar_estados
