configuraciones y mis ventas

--- a/routes.ini
+++ b/routes.ini
@@ -27,6 +27,7 @@ POST /listar-pedidos-aceptados=Pedidos_Ctrl->Listar_Pedidos_Aceptados
 POST /listar-pedidos-finalizados=Pedidos_Ctrl->Listar_Pedidos_Finalizados
 POST /listar-pedidos-historial=Pedidos_Ctrl->Listar_Pedidos_Historial
 POST /consultar-cod-pedido/@cod_pedido=Pedidos_Ctrl->consultar_Pedido
+POST /total-ventas=Pedidos_Ctrl->total_ventas
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
 ;PROVEEDOR
@@ -42,3 +43,9 @@ POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_prop
 POST /login-administrador=Administradores_Ctrl->login
 ;ESTADOS
 GET /listar-estados=Estados_Ctrl->listar_estados
+;TIPO PUBLICIDAD
+GET /listar-tipopublicidad=TipoPublicidad_Ctrl->listar_tipopublicidad
+;LICENCIAS
+GET /listar-licencias=Licencias_Ctrl->listar_Licencias
+;LICENCIAS
+GET /listar-comisiones=Comisiones_Ctrl->listar_Comisiones
