arreglo de en srvicio pedidos aceptados

--- a/routes.ini
+++ b/routes.ini
@@ -41,6 +41,7 @@ POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
 POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
 ;ADMINISTRADORES
 POST /login-administrador=Administradores_Ctrl->login
+GET /consulta-administrador/@cod_Administradores=Administradores_Ctrl->consultar
 ;ESTADOS
 GET /listar-estados=Estados_Ctrl->listar_estados
 ;TIPO PUBLICIDAD
