--- a/routes.ini
+++ b/routes.ini
@@ -36,6 +36,9 @@ POST /login-proveedor=Proveedor_Ctrl->login
 GET /consultar-proveedor/@cod_proveedor=Proveedor_Ctrl->consultar
 GET /listar-proveedores=Proveedor_Ctrl->listar_proveedores
 POST /editar-proveedor/@id_proveedor=Proveedor_Ctrl->actualizar
+POST /cambiar-contrasenia=Proveedor_Ctrl->cambiar_contrasenia
+POST /verificar-cambio-contrasenia=Proveedor_Ctrl->verificar_cambio_contrasenia
+POST /olvide-contrasenia=Proveedor_Ctrl->olvide_contrasenia
 ;PROPUESTAS
 POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
 POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
