se agrega totales en patalla inicio

--- a/routes.ini
+++ b/routes.ini
@@ -28,6 +28,7 @@ POST /listar-pedidos-finalizados=Pedidos_Ctrl->Listar_Pedidos_Finalizados
 POST /listar-pedidos-historial=Pedidos_Ctrl->Listar_Pedidos_Historial
 POST /consultar-cod-pedido/@cod_pedido=Pedidos_Ctrl->consultar_Pedido
 POST /total-ventas=Pedidos_Ctrl->total_ventas
+POST /total-pedidos=Pedidos_Ctrl->Total_Pedidos
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
 ;PROVEEDOR
