REPI_5 Se agrega funcionalidad de editar propuestas enviadas

--- a/routes.ini
+++ b/routes.ini
@@ -44,6 +44,7 @@ POST /contactanos-enviar=Proveedor_Ctrl->contactanos_enviar
 ;PROPUESTAS
 POST /cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->cotizar_propuesta
 POST /cliente-acepta-propuesta/@id_propuesta=Propuesta_Ctrl->cliente_acepta_propuesta
+POST /re-cotizar-propuesta/@id_propuesta=Propuesta_Ctrl->Recotizar_propuesta
 ;ADMINISTRADORES
 POST /login-administrador=Administradores_Ctrl->login
 GET /consulta-administrador/@cod_Administradores=Administradores_Ctrl->consultar
