REPI_19_20 se permite agregar datos de fac y env desde app movil

--- a/routes.ini
+++ b/routes.ini
@@ -35,6 +35,9 @@ POST /total-ventas=Pedidos_Ctrl->total_ventas
 POST /total-pedidos=Pedidos_Ctrl->Total_Pedidos
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
+GET /consultar-datosFac/@id_cliente=Datos_Factura_Ctrl->consultar_datosFac
+;DATOS ENVIO
+GET /consultar-datosEnv/@id_cliente=Datos_Envio_Ctrl->consultar_datosEnv
 ;PROVEEDOR
 POST /registrar-proveedor=Proveedor_Ctrl->registrar
 POST /login-proveedor=Proveedor_Ctrl->login
