--- a/routes.ini
+++ b/routes.ini
@@ -63,3 +63,8 @@ GET /listar-tipopublicidad=TipoPublicidad_Ctrl->listar_tipopublicidad
 GET /listar-licencias=Licencias_Ctrl->listar_Licencias
 ;LICENCIAS
 GET /listar-comisiones=Comisiones_Ctrl->listar_Comisiones
+;NOTIFICACIONES
+POST /registrar-mensaje=Notificaciones_Ctrl->registrar
+GET /num-noti/@id_cliente=Notificaciones_Ctrl->consultar_new
+POST /listar-notificaciones-historial=Notificaciones_Ctrl->Cargar_notificaciones
+POST /actualizar-noti/@id_notificacion=Notificaciones_Ctrl->actualizar_noti
