REPI_33 Se agrega solapas de bandeja de pendiente y finalizados

--- a/routes.ini
+++ b/routes.ini
@@ -30,6 +30,7 @@ POST /listar-pedidos-enviados=Pedidos_Ctrl->Listar_Pedidos_Enviados
 POST /listar-pedidos-aceptados=Pedidos_Ctrl->Listar_Pedidos_Aceptados
 POST /listar-pedidos-finalizados=Pedidos_Ctrl->Listar_Pedidos_Finalizados
 POST /listar-pedidos-historial=Pedidos_Ctrl->Listar_Pedidos_Historial
+POST /finalizar-cod-pedido/@cod_pedido=Pedidos_Ctrl->finalizar_Pedido
 POST /consultar-cod-pedido/@cod_pedido=Pedidos_Ctrl->consultar_Pedido
 POST /total-ventas=Pedidos_Ctrl->total_ventas
 POST /total-pedidos=Pedidos_Ctrl->Total_Pedidos
