REPI_3 Ingreso a la app sin login

--- a/routes.ini
+++ b/routes.ini
@@ -7,6 +7,8 @@ GET /consultar-cliente/@id_cliente=Cliente_Ctrl->consultar
 POST /actualizar-cuenta/@id_cliente=Cliente_Ctrl->actualizar_cuenta
 POST /login-cliente=Cliente_Ctrl->login
 POST /actualizar-token/@id_cliente=Cliente_Ctrl->actualizar_token
+POST /actualizar-login/@id_cliente=Cliente_Ctrl->actualizar_login
+
 POST /push-notificacion/@id_cliente=Cliente_Ctrl->Push_Notificacion
 ;PROVINCIAS
 GET /provincias-pais/@id_pais=Provincias_Ctrl->consultar
