REPI feature/desarrollo

--- a/routes.ini
+++ b/routes.ini
@@ -36,6 +36,7 @@ POST /finalizar-cod-pedido/@cod_pedido=Pedidos_Ctrl->finalizar_Pedido
 POST /consultar-cod-pedido/@cod_pedido=Pedidos_Ctrl->consultar_Pedido
 POST /total-ventas=Pedidos_Ctrl->total_ventas
 POST /total-pedidos=Pedidos_Ctrl->Total_Pedidos
+GET /borrar-pedido/@cod_pedido=Pedidos_Ctrl->borrar
 ;DATOS FACTURA
 POST /registrar-factura=Datos_Factura_Ctrl->registrar
 GET /consultar-datosFac/@id_cliente=Datos_Factura_Ctrl->consultar_datosFac
