REPI-108 Se egrego servicios de patrocinadores

--- a/routes.ini
+++ b/routes.ini
@@ -72,3 +72,7 @@ POST /registrar-mensaje=Notificaciones_Ctrl->registrar
 GET /num-noti/@id_cliente=Notificaciones_Ctrl->consultar_new
 POST /listar-notificaciones-historial=Notificaciones_Ctrl->Cargar_notificaciones
 POST /actualizar-noti/@id_notificacion=Notificaciones_Ctrl->actualizar_noti
+;PATROCINADORES
+GET /consultar-patrocinadores/@id_tipo=Patrocinadores_Ctrl->listado
+;TIPO_PATROCINADOR
+GET /listar-tipo-patrocinador=Tipo_Patrocinador_Ctrl->listado
